# agent-workbench

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json
backend/: package-lock.json  package.json
backend/src/: db.js  events.js  index.js  orchestrator.js  providerConfig.js  providers.js  runtime.js  scheduler.js
backend/src/db/migrations/: 001_initial_schema.sql  002_provider_configs.sql
docs/: 00_README_文档总览.md  01_PRD_产品需求文档.md  02_系统架构设计.md  03_事件流协议.md  04_数据模型与数据库设计.md  05_前端实现规范.md  06_后端编排与调度设计.md  07_Agent与LLM集成规范.md  08_工具系统与权限安全.md  09_API接口与实时通信规范.md  10_工程规范与测试验收.md  11_开发计划与交接清单.md  12_文件清单.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  presets.rs
src/app/: App.tsx  app.css
src/components/agent-sidebar/: AgentCard.tsx  AgentSidebar.tsx
src/components/inspector/: InspectorPanel.tsx
src/components/settings/: ModelList.tsx  ProviderDetail.tsx  ProviderList.tsx  SettingsDialog.tsx
src/components/top-task-bar/: TopTaskBar.tsx
src/components/trace-console/: TraceConsole.tsx
src/components/workbench/: EventBlock.tsx  LaneView.tsx  Workbench.tsx
src/lib/: backend-api.ts  tauri-ipc.ts
src/mocks/: mockAgents.ts  mockEvents.ts  mockPlayer.ts  mockTasks.ts
src/stores/: eventReducer.ts  providerStore.ts  workbenchStore.ts
src/types/: agent.ts  event.ts  index.ts  provider.ts  session.ts  task.ts
